--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,35 @@ asgiref==3.5.2
 bleach==5.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 cloudinary==1.30.0
+colorama==0.4.6
+cssbeautifier==1.14.7
 dj-database-url==1.0.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1.2
+django-materializecss-form==1.1.17
+django-partial-date==1.3.2
 django-summernote==0.8.20.0
+django-utils-six==2.0
+djlint==1.19.7
+EditorConfig==0.12.3
 gunicorn==20.1.0
+html-tag-names==0.1.2
+html-void-elements==0.1.0
 idna==3.4
+importlib-metadata==5.0.0
+jsbeautifier==1.14.7
+pathspec==0.10.2
 psycopg2==2.9.4
+PyYAML==6.0
+regex==2022.10.31
 requests==2.28.1
 six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
+tqdm==4.64.1
 urllib3==1.26.12
 webencodings==0.5.1
 whitenoise==6.2.0
-django-partial-date==1.3.2
+zipp==3.10.0
