--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,11 @@ bleach==5.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
-cloudinary==1.30.0
 colorama==0.4.6
 cssbeautifier==1.14.7
 dj-database-url==1.0.0
-dj3-cloudinary-storage==0.0.6
 Django==4.1.2
 django-materializecss-form==1.1.17
-django-partial-date==1.3.2
-django-summernote==0.8.20.0
 django-utils-six==2.0
 djlint==1.19.7
 EditorConfig==0.12.3
@@ -22,7 +18,7 @@ idna==3.4
 importlib-metadata==5.0.0
 jsbeautifier==1.14.7
 pathspec==0.10.2
-psycopg2==2.9.4
+psycopg2-binary==2.9.5
 PyYAML==6.0
 regex==2022.10.31
 requests==2.28.1
